2005-08-24  Timothy Brownawell  <tbrownaw@gmail.com>

	* tests/t_add_vs_commit.at: Fix BASE_REVISION usage for the working
	dir of interest not being '.' .
	remove XFAIL

2005-08-24  Timothy Brownawell  <tbrownaw@gmail.com>

	* tests/t_merge_add_rename_add.at: remove XFAIL
	The result of this merge (<mv a b>, <add b>) are now defined: call
	the resolve_path_conflicts hook with a "collision" type conflict.
	Not resolving the conflict (in this case) leads to a warning,
	followed by a crash. The warning should be an error, but is triggered
	by the monotone db.

2005-08-22  Timothy Brownawell  <tbrownaw@gmail.com>

	* tree merger: Allow tree conflicts to be resolved by the user.
	New lua hook resolve_path_conflicts.

2005-08-22  Timothy Brownawell  <tbrownaw@gmail.com>

	* commands.cc: remove tree merger from the pcdv test driver

2005-08-22  Timothy Brownawell  <tbrownaw@gmail.com>

	* change_set.cc (process_filetree_history): Only go back to the lcad.
	Prehistory isn't needed for merging, and slows things down a lot.

2005-08-21  Timothy Brownawell  <tbrownaw@gmail.com>

	* change_set.{cc,hh}: New function, transplant_change_set . Used
	for update.
	* change_set.cc: use versioned scalars for tracking file hashes.
	Clean up project_missing_deltas.

2005-08-21  Timothy Brownawell  <tbrownaw@gmail.com>

	Fix bad merge (user error).

2005-08-20  Timothy Brownawell  <tbrownaw@gmail.com>

	* pcdv.cc (change_value): Bugfix.

2005-08-20  Timothy Brownawell  <tbrownaw@gmail.com>

	* change_set.cc: use versioned scalars to track file edits
	* pcdv.cc (tree_state::current_scalars): bugfix

2005-08-20  Timothy Brownawell  <tbrownaw@gmail.com>

	* pcdv.{cc,hh} (tree merger): each file now gets a versioned scalar

2005-08-19  Timothy Brownawell  <tbrownaw@gmail.com>

	* change_set.cc: Add (and use) dump() for vector<path_rearrangement>
	* pcdv.cc: Clean up P() / L() usage.
	* pcdv.cc (item_status::suture): Downgrade invariant (should